tests/snapshots/io__load.bend.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/io/load.bend
---
Strict mode:
λa (a IO/Done/tag IO/MAGIC λb (b Result/Ok/tag "Contents\n"))
