tests/snapshots/io__load_fail.bend.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/io/load_fail.bend
---
Strict mode:
λa (a IO/Done/tag IO/MAGIC λb (b Result/Err/tag +2))
