tests/snapshots/io__store.bend.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/io/store.bend
---
Strict mode:
λa (a Result/Ok/tag [40, 77, 97, 105, 110, 41, 32, 61, 32, 48])
