tests/snapshots/io__store.hvm.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/io/store.hvm
---
Lazy mode:
*
Strict mode:
*
